# coderetreat

./: .gitignore  README.rdoc
retreat_gem/: README.rdoc  retreat.gemspec
retreat_gem/lib/coderetreat/: retreat.rb
starting_points/coffeescript/: README.md  coderetreat.coffee  coderetreat.html  coderetreatTest.coffee
starting_points/cplusplus/cmake/: CMakeLists.txt  Readme.txt
starting_points/cplusplus/cmake/src/: CMakeLists.txt  examples.txt  test_GameOfLife.cpp
starting_points/csharp/linqpad/: BDD Examples.linq  GameOfLife.linq  README.txt  TDD Examples.linq
starting_points/csharp/vs2012.nunit/: GameOfLife.csproj  GameOfLifeTests.cs
starting_points/csharp/vs2012.xunit.fluentassertions/: GameOfLife.csproj  packages.config
starting_points/csharp/vs2013.nunit/: GameOfLife.csproj  GameOfLifeTests.cs  vs2013.sln
starting_points/csharp/vs2013.xunit.fluentassertions/: GameOfLife.csproj  GameOfLife.sln  GameOfLifeTests.cs
starting_points/elixir/: mix.exs
starting_points/elixir/lib/: gol.ex
starting_points/elm/: GameOfLife.elm  README.md  elm-package.json
starting_points/erlang/: .gitignore  README  rebar
starting_points/fsharp/: .gitignore
starting_points/groovy/: .gitignore  pom.xml
starting_points/intercal/: readme.txt
starting_points/java/: .classpath  .project  README.md  build.gradle  pom.xml  settings.gradle
starting_points/javascript/: README.md  coderetreat.html  coderetreatTest.js
starting_points/lisp/: game-of-life-test.lisp  game-of-life.lisp  lisp-unit.lisp
starting_points/perl/: README.txt  life.pl
starting_points/php/: phpunit.xml
starting_points/python/: README.md  game_of_life.py  pytddmon.py  test.py  test_life.py
starting_points/scala/: .classpath  .gitignore  .project  README.md  build.sbt  pom.xml
(+73 files in other folders)
